<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.gfsclock.gfstimeclock.OptionsScreen">


    <Button
        android:text="@string/break_in_button"
        android:onClick="breakIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ClockInButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/BreakInButton" />

    <Button
        android:text="@string/lunch_in_button"
        android:onClick="lunchIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BreakInButton"
        android:layout_alignEnd="@+id/BreakInButton"
        android:layout_marginTop="16dp"
        android:id="@+id/LunchInButton" />

    <Button
        android:text="@string/clock_out_button"
        android:onClick="clockOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ClockInButton"
        android:layout_marginStart="113dp"
        android:id="@+id/ClockOutButton" />

    <Button
        android:text="@string/break_out_button"
        android:onClick="breakOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BreakOutButton"
        android:layout_alignBaseline="@+id/BreakInButton"
        android:layout_alignBottom="@+id/BreakInButton"
        android:layout_alignStart="@+id/ClockOutButton" />

    <Button
        android:text="@string/lunch_out_button"
        android:onClick="lunchOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LunchInButton"
        android:layout_alignStart="@+id/BreakOutButton"
        android:id="@+id/LunchOutButton" />

    <Button
        android:text="@string/clock_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clockIn"
        android:id="@+id/ClockInButton"
        tools:layout_alignParentTop="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/change_job_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ChangeJobButton"
        android:layout_alignTop="@+id/LunchOutButton"
        android:layout_alignEnd="@+id/PunchHistoryButton"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/punch_history"
        android:onClick="showPunchHistoryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PunchHistoryButton"
        android:layout_marginStart="82dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/LunchOutButton" />


</RelativeLayout>
